--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ canvas {
     <div id="app">
       <h1>自キ 3D 表示サンプル</h1>
       <p>
-        これまでに設計してきたキーボードたちのデータを、そのまま寝かしておくのはもったいないなあということで、アーカイブサイトの実験。
+        自作キーボードたちを 3D プレビューできるページのプロトタイプ。
+        過去の作品たちのアーカイブ化に向けて。
       </p>
       <ul>
         <li><a href="./switch42.html">Switch42 Keyboard</a></li>
