deploy: 7a1a345733acbac38be2bc2e4b53b980a29fff35

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BajwH_qg.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-ByVntoY1.js">
+    <script type="module" crossorigin src="./assets/gemini-DFTgdGV_.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DueKlUbJ.js">
   </head>
   <body>
     <div id="app">
