--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DFTgdGV_.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DueKlUbJ.js">
+    <script type="module" crossorigin src="./assets/gemini-CrlG9H-B.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-ZRhRGppM.js">
   </head>
   <body>
     <div id="app">
