--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-Gdx4R1lB.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DueKlUbJ.js">
+    <script type="module" crossorigin src="./assets/morpho-CLUzHvnJ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-ZRhRGppM.js">
   </head>
   <body>
     <div id="app">
