deploy: a54c01e11319f3990666c956ec0335639c3bff06

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-bnt7izuP.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-LZt8sCxV.js">
+    <script type="module" crossorigin src="./assets/gemini-9Mog2asO.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CuXhQpvt.js">
   </head>
   <body>
     <div id="app">
