--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-C6-dSM42.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-LZt8sCxV.js">
+    <script type="module" crossorigin src="./assets/morpho-Dj9kTIiv.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CuXhQpvt.js">
   </head>
   <body>
     <div id="app">
