--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DyG3VM2R.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-D_0T4hkF.js">
+    <script type="module" crossorigin src="./assets/gemini-BuPX0Cvc.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CI568Zb9.js">
   </head>
   <body>
     <div id="app">
