deploy: f49d08c5dd70171c4fc5ddc2f5962b24e8e40e7a

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BuPX0Cvc.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CI568Zb9.js">
+    <script type="module" crossorigin src="./assets/gemini-BIQE4pnl.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-G4DKJHVl.js">
   </head>
   <body>
     <div id="app">
