--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-B_F1lgJy.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CI568Zb9.js">
+    <script type="module" crossorigin src="./assets/morpho-DIprGiGi.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-G4DKJHVl.js">
   </head>
   <body>
     <div id="app">
