--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-aqSpZqwC.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-B5joHw5Q.js">
+    <script type="module" crossorigin src="./assets/gemini-BkHtdjP5.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BYXp5vID.js">
   </head>
   <body>
     <div id="app">
