--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CnBc29gN.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-uejnIqtZ.js">
+    <script type="module" crossorigin src="./assets/gemini-CXZcgXlx.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-V3SnFBx2.js">
   </head>
   <body>
     <div id="app">
