--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CYMp3hVP.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-V3SnFBx2.js">
+    <script type="module" crossorigin src="./assets/morpho-8tVhBpiK.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-C3FhVwFb.js">
   </head>
   <body>
     <div id="app">
