--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@ canvas {
         自作キーボードたちを 3D プレビューできるページのプロトタイプ。
         過去の作品たちのアーカイブ化に向けて。
       </p>
+      <h2>40%</h2>
       <ul>
         <li><a href="./switch42.html">Switch42 Keyboard</a></li>
-        <li><a href="./morpho.html">Morpho Keyboard</a></li>
         <li><a href="./gemini.html">Gemini Keyboard</a></li>
+      </ul>
+      <h2>30%</h2>
+      <ul>
+        <li><a href="./kastor2.html">Kastor II Keyboard</a></li>
+      </ul>
+      <h2>Experimental</h2>
+      <ul>
+        <li><a href="./morpho.html">Morpho Keyboard</a></li>
       </ul>
     </div>
   </body>
