--- a/kastor2.html
+++ b/kastor2.html
@@ -14,12 +14,12 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CgqNtr5D.js"></script>
+    <script type="module" crossorigin src="./assets/kastor2-DKDOChnk.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-BHF2QzL3.js">
   </head>
   <body>
     <div id="app">
-      <h1>Morpho Keyboard</h1>
+      <h1>Kastor II Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <div>
