--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ canvas {
       <h2>30%</h2>
       <ul>
         <li><a href="./kastor2.html">Kastor II Keyboard</a></li>
+        <li><a href="./kastor.html">Kastor Keyboard</a></li>
       </ul>
       <h2>Experimental</h2>
       <ul>
