deploy: 23e8667c6d857989222d64d5c6111467fe457fee

--- a/kastor.html
+++ b/kastor.html
@@ -14,12 +14,12 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor2-CgjJaJNd.js"></script>
+    <script type="module" crossorigin src="./assets/kastor-C6GWaQGS.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-DOHpsYIk.js">
   </head>
   <body>
     <div id="app">
-      <h1>Kastor II Keyboard</h1>
+      <h1>Kastor Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <div>
