--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DYs10W1I.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BHF2QzL3.js">
+    <script type="module" crossorigin src="./assets/gemini-BR-XfOc0.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DOHpsYIk.js">
   </head>
   <body>
     <div id="app">
