--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CgqNtr5D.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BHF2QzL3.js">
+    <script type="module" crossorigin src="./assets/morpho-BysuI_wZ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DOHpsYIk.js">
   </head>
   <body>
     <div id="app">
