deploy: 5b7d5537534464750dc4b67c674f678ed3fd2bc1

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BR-XfOc0.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOHpsYIk.js">
+    <script type="module" crossorigin src="./assets/gemini-wrIe4Ld3.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-7KCUQG6z.js">
   </head>
   <body>
     <div id="app">
