deploy: 09c2982d0d259d99c95090d7f6426ab4bacc0812

--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-L9j7-Wlu.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-7KCUQG6z.js">
+    <script type="module" crossorigin src="./assets/kastor-CiaTZzgd.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BReRkxQr.js">
   </head>
   <body>
     <div id="app">
