--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-wrIe4Ld3.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-7KCUQG6z.js">
+    <script type="module" crossorigin src="./assets/gemini-B49b3LWT.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BReRkxQr.js">
   </head>
   <body>
     <div id="app">
