deploy: bae787e57ac7375185a6461abd630ab25e8e674d

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-B49b3LWT.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BReRkxQr.js">
+    <script type="module" crossorigin src="./assets/gemini-LHoqbNgf.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-sElWFTmR.js">
   </head>
   <body>
     <div id="app">
