--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-CiaTZzgd.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BReRkxQr.js">
+    <script type="module" crossorigin src="./assets/kastor-sAjl_NSj.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-sElWFTmR.js">
   </head>
   <body>
     <div id="app">
