Add brief descriptions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ canvas {
   </head>
   <body>
     <div id="app">
-      <h1>自キ 3D 表示サンプル</h1>
+      <h1>自キ 3D 表示デモ</h1>
       <p>
         自作キーボードたちを 3D プレビューできるページのプロトタイプ。
         過去の作品たちのアーカイブ化に向けて。
@@ -36,6 +36,9 @@ canvas {
       <ul>
         <li><a href="./morpho.html">Morpho Keyboard</a></li>
       </ul>
+      <p>
+        全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいなと思っています。
+      </p>
     </div>
   </body>
 </html>
