--- a/kastor2.html
+++ b/kastor2.html
@@ -20,9 +20,21 @@
       <h1>Kastor II Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        左右非対称の異様なレイアウトですが、設計思想は旧 Kastor Keyboard から引き続き、「親指派のための 30% キーボード」です。通常の Row-staggered から、最下段だけを外側に 0.25u ズラすことでこの配列を導くことができます。
+      </p>
+      <p>
+        縦方向は限界まで切り詰めつつ、横方向にはしっかり１２列確保しており、横長なシルエットになっているのも特徴です。これは作者が Emacs ユーザーであることに由来します。
+      </p>
+      <p>
+        積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
+      </p>
+      <p>
+        Influenced by: Gherkin
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
     <script type="module" src="/src/kastor2.ts"></script>
   </body>
