--- a/morpho.html
+++ b/morpho.html
@@ -20,9 +20,24 @@
       <h1>Morpho Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        ソケットを大量に配置し、１台で様々な Row-staggered レイアウトを試せる実験基板です。
+      </p>
+      <p>
+        Symmetric, 逆 Symmetric (Answer40), X-Symmetric (Treadstone48) など様々な Row-staggered の亜種がコミュニティで検討されていた当時、全てのレイアウトを公平に、かつ低コストで比較できる方法はないかと考えていました。そこで、「７列キーボードにすれば、上下の行を 0.5u スライドするだけで全てのレイアウトが再現できる」ことに気付き、この設計に至りました。
+      </p>
+      <p>
+        親指クラスタのソケットは他の部分と少し違う配置になっており、 0.25u, 0.5u などのキーキャップを組み合わせることで最適な分割を模索できるようになっています。
+      </p>
+      <p>
+        スイッチプレートなし、ボトムプレートは基板で代用と、限界までコストを切り詰めているので長く使えるものではありませんが、なかなか面白い一品になったと思います。
+      </p>
+      <p>
+        Influenced by: DUMANG, Answer40, Treadstone48, Katana60, HHKB
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
     <script type="module" src="/src/morpho.ts"></script>
   </body>
