--- a/gemini.html
+++ b/gemini.html
@@ -20,9 +20,21 @@
       <h1>Gemini Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        自分の中で「終着点」になっている分割キーボードです。
+      </p>
+      <p>
+        さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
+      </p>
+      <p>
+        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを発明し、当時としては気合いの入った設計になっていました。
+      </p>
+      <p>
+        Influenced by: Answer40, Claw44, Corne, TGR Alice
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
     <script type="module" src="/src/gemini.ts"></script>
   </body>
