deploy: 5b887929985ba1dce1233cd3851bfa69bf703b7b

--- a/gemini.html
+++ b/gemini.html
@@ -14,17 +14,29 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-LHoqbNgf.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-sElWFTmR.js">
+    <script type="module" crossorigin src="./assets/gemini-BNWs5JSw.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-B1ylX2kY.js">
   </head>
   <body>
     <div id="app">
       <h1>Gemini Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        自分の中で「終着点」になっている分割キーボードです。
+      </p>
+      <p>
+        さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
+      </p>
+      <p>
+        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを発明し、当時としては気合いの入った設計になっていました。
+      </p>
+      <p>
+        Influenced by: Answer40, Claw44, Corne, TGR Alice
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
   </body>
 </html>
