--- a/kastor.html
+++ b/kastor.html
@@ -14,17 +14,29 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-sAjl_NSj.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-sElWFTmR.js">
+    <script type="module" crossorigin src="./assets/kastor-ChkxoFB2.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-B1ylX2kY.js">
   </head>
   <body>
     <div id="app">
       <h1>Kastor Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        Kastor II Keyboard の元になったプロトタイプで、「親指派のための 30% レイアウト」を模索していた頃の作品です。
+      </p>
+      <p>
+        あえて四角形にこだわらないことで生まれた、無骨で変態的なビジュアルは今でも結構気に入っています。
+      </p>
+      <p>
+        実用面でも、２行目が左右に張り出していることで「小指 Ctrl」を死守し、ショートカットキーがそのまま使えるようになっていたり、１行目の中央にカッコなどの記号キーを追加配置できるようになっていたりします。
+      </p>
+      <p>
+        Influenced by: Answer40, ことのはシリーズ
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
   </body>
 </html>
