--- a/switch42.html
+++ b/switch42.html
@@ -14,17 +14,26 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-DsrgdZzX.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-sElWFTmR.js">
+    <script type="module" crossorigin src="./assets/switch42-CJ1wK4kR.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-B1ylX2kY.js">
   </head>
   <body>
     <div id="app">
       <h1>Switch42 Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <div>
+      <p>
+        初めて自分で設計した分割キーボードです。
+      </p>
+      <p>
+        MiniAxe のミニマルな外観を参照しつつ、ハンダ付けの容易な部品だけで組み立てられる、親指クラスタが少し離れている、LED が搭載可能、などの特徴を持ちます。
+      </p>
+      <p>
+        Influenced by: MiniAxe, Corne, Ergo42
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
-      </div>
+      </p>
     </div>
   </body>
 </html>
