deploy: 36fd17e1a39051f2828d0472a0368e3ea974f9b8

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BNWs5JSw.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-B1ylX2kY.js">
+    <script type="module" crossorigin src="./assets/gemini-C7pg3OBz.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CWhKrolE.js">
   </head>
   <body>
     <div id="app">
