deploy: 40ddf90e233e13c10f033d4a0df7c0ae79bf823a

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-C7pg3OBz.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CWhKrolE.js">
+    <script type="module" crossorigin src="./assets/gemini-BrtxYicd.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
   </head>
   <body>
     <div id="app">
