--- a/kastor2.html
+++ b/kastor2.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor2-BZW_Zprk.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CWhKrolE.js">
+    <script type="module" crossorigin src="./assets/kastor2-CbVKtE6Y.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
   </head>
   <body>
     <div id="app">
@@ -29,7 +29,7 @@
         縦方向は限界まで切り詰めつつ、横方向にはしっかり１２列確保しており、横長なシルエットになっているのも特徴です。これは作者が Emacs ユーザーであることに由来します。
       </p>
       <p>
-        積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
+        ケースも旧 Kastor Keyboard から打って変わって、落ち着いた外観になっています。積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
       </p>
       <p>
         Influenced by: Gherkin
