--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-BneuDxpj.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CWhKrolE.js">
+    <script type="module" crossorigin src="./assets/morpho-I-K1UKaS.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
   </head>
   <body>
     <div id="app">
