--- a/gemini.html
+++ b/gemini.html
@@ -27,10 +27,10 @@
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
       </p>
       <p>
-        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを発明し、当時としては気合いの入った設計になっていました。
+        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
       </p>
       <p>
-        Influenced by: Answer40, Claw44, Corne, TGR Alice
+        Influenced by: Answer40, Claw44, Corne, TGR Alice, SAKANA (not おさかな)
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
