deploy: 3fbc7ee75ba228aea8b7d7ca5d3efb4617cef94f

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BrtxYicd.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
+    <script type="module" crossorigin src="./assets/gemini-DPH-32JU.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DL0GIijP.js">
   </head>
   <body>
     <div id="app">
@@ -29,10 +29,10 @@
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
       </p>
       <p>
-        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを発明し、当時としては気合いの入った設計になっていました。
+        打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
       </p>
       <p>
-        Influenced by: Answer40, Claw44, Corne, TGR Alice
+        Influenced by: Answer40, Claw44, Corne, TGR Alice, SAKANA (not おさかな)
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
