--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-C49wg5aa.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
+    <script type="module" crossorigin src="./assets/kastor-BA7DTGGQ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DL0GIijP.js">
   </head>
   <body>
     <div id="app">
