--- a/kastor2.html
+++ b/kastor2.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor2-CbVKtE6Y.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-8FPspOK4.js">
+    <script type="module" crossorigin src="./assets/kastor2-B_HFrY3C.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DL0GIijP.js">
   </head>
   <body>
     <div id="app">
@@ -23,16 +23,16 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        左右非対称の異様なレイアウトですが、設計思想は旧 Kastor Keyboard から引き続き、「親指派のための 30% キーボード」です。通常の Row-staggered から、最下段だけを外側に 0.25u ズラすことでこの配列を導くことができます。
+        左右非対称の異様なレイアウトですが、コンセプトは旧 Kastor から引き続き、「親指派のための 30% キーボード」です。通常の Row-staggered から、最下段だけを外側に 0.25u ズラすことでこの配列を導くことができます。
       </p>
       <p>
         縦方向は限界まで切り詰めつつ、横方向にはしっかり１２列確保しており、横長なシルエットになっているのも特徴です。これは作者が Emacs ユーザーであることに由来します。
       </p>
       <p>
-        ケースも旧 Kastor Keyboard から打って変わって、落ち着いた外観になっています。積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
+        ケースも旧 Kastor から打って変わって、落ち着いた外観になっています。積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
       </p>
       <p>
-        Influenced by: Gherkin
+        Influenced by: Gherkin, Kastor
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
