--- a/kastor2.html
+++ b/kastor2.html
@@ -27,7 +27,7 @@
         縦方向は限界まで切り詰めつつ、横方向にはしっかり１２列確保しており、横長なシルエットになっているのも特徴です。これは作者が Emacs ユーザーであることに由来します。
       </p>
       <p>
-        ケースも旧 Kastor から打って変わって、落ち着いた外観になっています。積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
+        ケースも旧 Kastor からうってかわって、落ち着いた外観になっています。積層ケースの打鍵感向上を意識し始めた最初の作品でもあります。
       </p>
       <p>
         Influenced by: Gherkin, Kastor
