--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DPH-32JU.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DL0GIijP.js">
+    <script type="module" crossorigin src="./assets/gemini-81EpERHM.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CRYVYSuc.js">
   </head>
   <body>
     <div id="app">
