deploy: 0e6674b9087eea477b2ab29bc74e09d9fd273a42

--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-dr32o6ZK.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CRYVYSuc.js">
+    <script type="module" crossorigin src="./assets/kastor-DNZbFUPF.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-ROz6YgyV.js">
   </head>
   <body>
     <div id="app">
