--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-Blt6cW2v.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CRYVYSuc.js">
+    <script type="module" crossorigin src="./assets/morpho-DdzhzVyA.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-ROz6YgyV.js">
   </head>
   <body>
     <div id="app">
