deploy: 73b87a3fc207bba9b77b45e0c1144aa099e3c7c4

--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-DdzhzVyA.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-ROz6YgyV.js">
+    <script type="module" crossorigin src="./assets/morpho-CAdr45T5.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-kbJW-J_B.js">
   </head>
   <body>
     <div id="app">
