--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-JJhucZDQ.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-ROz6YgyV.js">
+    <script type="module" crossorigin src="./assets/gemini-CFOntJAZ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-kbJW-J_B.js">
   </head>
   <body>
     <div id="app">
