--- a/gemini.html
+++ b/gemini.html
@@ -21,7 +21,7 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        自分の中で「終着点」になっている分割キーボードです。
+        自分の中で「自作キーボード活動の終着点」になっている分割キーボードです。
       </p>
       <p>
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
