--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CFOntJAZ.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-kbJW-J_B.js">
+    <script type="module" crossorigin src="./assets/gemini-Ddzjhu52.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-Da2w8MOe.js">
   </head>
   <body>
     <div id="app">
@@ -23,7 +23,7 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        自分の中で「終着点」になっている分割キーボードです。
+        自分の中で「自作キーボード活動の終着点」になっている分割キーボードです。
       </p>
       <p>
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
