--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CAdr45T5.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-kbJW-J_B.js">
+    <script type="module" crossorigin src="./assets/morpho-BkzCk0EY.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-Da2w8MOe.js">
   </head>
   <body>
     <div id="app">
