deploy: 2d609503c3e6ad8c496e4dd3da3d99f565b78249

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-Ddzjhu52.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-Da2w8MOe.js">
+    <script type="module" crossorigin src="./assets/gemini-CYZG932c.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-C2FD9YSe.js">
   </head>
   <body>
     <div id="app">
