--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-Er7ch1hB.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-Da2w8MOe.js">
+    <script type="module" crossorigin src="./assets/kastor-CqwwkEsd.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-C2FD9YSe.js">
   </head>
   <body>
     <div id="app">
