deploy: df2fbc9acad33727ab282cd2a2c0acd3d4fca580

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CYZG932c.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-C2FD9YSe.js">
+    <script type="module" crossorigin src="./assets/gemini-DMiv2cPp.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DJFD7bWj.js">
   </head>
   <body>
     <div id="app">
