--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CMi-xj89.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-C2FD9YSe.js">
+    <script type="module" crossorigin src="./assets/morpho-CTIkM-Dd.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DJFD7bWj.js">
   </head>
   <body>
     <div id="app">
