--- a/kastor.html
+++ b/kastor.html
@@ -21,7 +21,7 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        Kastor II Keyboard の元になったプロトタイプで、「親指派のための 30% レイアウト」を模索していた頃の作品です。
+        Kastor II の元になったプロトタイプで、「親指派のための 30% レイアウト」を模索していた頃の作品です。
       </p>
       <p>
         あえて四角形にこだわらないことで生まれた、無骨で変態的なビジュアルは今でも結構気に入っています。
