--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DMiv2cPp.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DJFD7bWj.js">
+    <script type="module" crossorigin src="./assets/gemini-CMIM5tO7.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-AKCSFDUy.js">
   </head>
   <body>
     <div id="app">
