--- a/gemini.html
+++ b/gemini.html
@@ -27,6 +27,9 @@
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
       </p>
       <p>
+        ズレ具合については、複数の分割エルゴノミックキーボードを叩き台として参照しつつ、数回の試作を重ねて調整しました。
+      </p>
+      <p>
         打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
       </p>
       <p>
