deploy: b82cf18fd0c820d3b6b5c029ea78452fc3eb698c

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CMIM5tO7.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-AKCSFDUy.js">
+    <script type="module" crossorigin src="./assets/gemini-DybonGtF.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CCqIq8KE.js">
   </head>
   <body>
     <div id="app">
@@ -27,6 +27,9 @@
       </p>
       <p>
         さまざまな分割キーボードを試してきた経験から、「横ズレと縦ズレの両立」という新しい物理配列に辿りつきました。これによって、「手癖を活かしたタイピング」とエルゴノミクスの両立を実現しています。
+      </p>
+      <p>
+        ズレ具合については、複数の分割エルゴノミックキーボードを叩き台として参照しつつ、数回の試作を重ねて調整しました。
       </p>
       <p>
         打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
