--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-oaGFY6nk.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-AKCSFDUy.js">
+    <script type="module" crossorigin src="./assets/morpho-B9l1thKC.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CCqIq8KE.js">
   </head>
   <body>
     <div id="app">
@@ -30,9 +30,6 @@
       </p>
       <p>
         親指クラスタのソケットは他の部分と少し違う配置になっており、 0.25u, 0.5u などのキーキャップを組み合わせることで最適な分割を模索できるようになっています。
-      </p>
-      <p>
-        スイッチプレートなし、ボトムプレートは基板で代用と、限界までコストを切り詰めているので長く使えるものではありませんが、なかなか面白い一品になったと思います。
       </p>
       <p>
         Influenced by: DUMANG, Answer40, Treadstone48, Katana60, HHKB
