--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-CpsPyahY.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-AKCSFDUy.js">
+    <script type="module" crossorigin src="./assets/kastor-BCCeqeU3.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CCqIq8KE.js">
   </head>
   <body>
     <div id="app">
