--- a/morpho.html
+++ b/morpho.html
@@ -24,7 +24,7 @@
         ソケットを大量に配置し、１台で様々な Row-staggered レイアウトを試せる実験基板です。
       </p>
       <p>
-        Symmetric, 逆 Symmetric (Answer40), X-Symmetric (Treadstone48) など様々な Row-staggered の亜種がコミュニティで検討されていた当時、全てのレイアウトを公平に、かつ低コストで比較できる方法はないかと考えていました。そこで、「中央の行だけ１列増やしたレイアウトにすると、上下の行を 0.5u スライドするだけで全てのレイアウトが再現できる」ことに気付き、この設計に至りました。
+        Symmetric, 逆 Symmetric (Answer40), X-Symmetric (Treadstone48) など様々な Row-staggered の亜種がコミュニティで検討されていた当時、全てのレイアウトを公平に、かつ低コストで比較できる方法はないかと考え、設計しました。
       </p>
       <p>
         親指クラスタのソケットは他の部分と少し違う配置になっており、 0.25u, 0.5u などのキーキャップを組み合わせることで最適な分割位置を模索できるようになっています。
