deploy: 61f2c39fef9f5640e509d6bc5ab4de4285681026

--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-BCCeqeU3.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CCqIq8KE.js">
+    <script type="module" crossorigin src="./assets/kastor-CgFh9od9.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CiJFwuvv.js">
   </head>
   <body>
     <div id="app">
