--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DybonGtF.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CCqIq8KE.js">
+    <script type="module" crossorigin src="./assets/gemini-C6HqBGHC.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CiJFwuvv.js">
   </head>
   <body>
     <div id="app">
