--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ canvas {
       </ul>
       <h2>研究用・その他</h2>
       <ul>
+        <li><a href="./wym16.html">Wym16 Keyboard</a></li>
         <li><a href="./morpho.html">Morpho Keyboard</a></li>
       </ul>
       <p>
