--- a/wym16.html
+++ b/wym16.html
@@ -30,6 +30,9 @@
         これ１台で５種類のマウント方法を試すことができ、かつどのマウント方法を選んでも打面の高さがピッタリ揃うという、パズルのような変態設計になっています。
       </p>
       <p>
+        Influenced by: -
+      </p>
+      <p>
         <a href="./index.html">＜ Back</a>
       </p>
     </div>
