--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-eQBlLsfj.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CiJFwuvv.js">
+    <script type="module" crossorigin src="./assets/morpho-CykvJE6P.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-_vz2Yoaf.js">
   </head>
   <body>
     <div id="app">
