--- a/wym16.html
+++ b/wym16.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-DSlyIVP6.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-_vz2Yoaf.js">
+    <script type="module" crossorigin src="./assets/wym16-C1qB_ZaJ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DgoxnZjn.js">
   </head>
   <body>
     <div id="app">
