--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CpAoYjps.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-_vz2Yoaf.js">
+    <script type="module" crossorigin src="./assets/gemini-TQ26_hHw.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DgoxnZjn.js">
   </head>
   <body>
     <div id="app">
