--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-Dko8qGoF.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-_vz2Yoaf.js">
+    <script type="module" crossorigin src="./assets/kastor-CN8MSkI0.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DgoxnZjn.js">
   </head>
   <body>
     <div id="app">
