--- a/wym16.html
+++ b/wym16.html
@@ -24,7 +24,7 @@
         プレートの組み付け順を工夫することで、１台で様々なマウント方法を試せる実験基板です。
       </p>
       <p>
-        トップマウント、ボトムマウント、トレイマウント、サンドイッチ、ガスケットなど、スイッチの取り付け方には色々な種類があり、それぞれ微妙に打鍵感が変わると言われますが、アクリル積層ケースにおいて、これが実際にどのくらい打鍵感に影響するのかを研究するために設計しました。
+        トップマウント、ボトムマウント、トレイマウント、サンドイッチ、ガスケットなど、プレートの固定方法には色々な戦略があり、それぞれ微妙に打鍵感が変わると言われますが、アクリル積層ケースにおいて、これが実際にどのくらい打鍵感に影響するのかを研究するために設計しました。
       </p>
       <p>
         これ１台で５種類のマウント方法を試すことができ、かつどのマウント方法を選んでも打面の高さがピッタリ揃うという、パズルのような変態設計になっています。
