--- a/wym16.html
+++ b/wym16.html
@@ -27,7 +27,7 @@
         トップマウント、ボトムマウント、トレイマウント、サンドイッチ、ガスケットなど、プレートの固定方法には色々な戦略があり、それぞれ微妙に打鍵感が変わると言われますが、アクリル積層ケースにおいて、これが実際にどのくらい打鍵感に影響するのかを研究するために設計しました。
       </p>
       <p>
-        これ１台で５種類のマウント方法を試すことができ、かつどのマウント方法を選んでも打面の高さがピッタリ揃うという、パズルのような変態設計になっています。
+        これ１台で５種類のマウント方法を試すことができ、かつどのマウント方法を選んでも打面の高さがピッタリ揃うという、パズルのような設計になっています。
       </p>
       <p>
         Influenced by: -
