--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-CVdHnqat.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-GCLkKpq1.js">
+    <script type="module" crossorigin src="./assets/morpho-BCZEFWJK.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-MKzFw4Ae.js">
   </head>
   <body>
     <div id="app">
