Add hifumi (and refactor pcb_z)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ canvas {
         <li><a href="./kastor2.html">Kastor II Keyboard</a></li>
         <li><a href="./kastor.html">Kastor Keyboard</a></li>
       </ul>
+      <h2>マクロパッド・テンキー</h2>
+      <ul>
+        <li><a href="./hifumi.html">Hifumi Keyboard</a></li>
+      </ul>
       <h2>研究用・その他</h2>
       <ul>
         <li><a href="./wym16.html">Wym16 Keyboard</a></li>
