deploy: eeff59ecdef2c9e65de6e1ab9d1b476942f858ec

--- a/hifumi.html
+++ b/hifumi.html
@@ -14,22 +14,16 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-F09jFw92.js"></script>
+    <script type="module" crossorigin src="./assets/hifumi-CECme7iV.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
   </head>
   <body>
     <div id="app">
-      <h1>Switch42 Keyboard</h1>
+      <h1>Hifumi Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        初めて自分で設計した分割キーボードです。
-      </p>
-      <p>
-        MiniAxe のミニマルな外観を参照しつつ、ハンダ付けの容易な部品だけで組み立てられる、親指クラスタが少し離れている、LED が搭載可能、などの特徴を持ちます。
-      </p>
-      <p>
-        Influenced by: MiniAxe, Corne, Ergo42
+        Influenced by: Meishi
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
