--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-BF1Kbekg.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-MKzFw4Ae.js">
+    <script type="module" crossorigin src="./assets/gemini-C05UD330.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
   </head>
   <body>
     <div id="app">
