--- a/hifumi.html
+++ b/hifumi.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        作りながら学べる自作キーボードの入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」のセット教材として設計したマクロパッドです。
+      </p>
+      <p>
+        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
+      </p>
+      <p>
         Influenced by: Meishi
       </p>
       <p>
