deploy: 9476e782215f2e2a0d2502a85daf9ebe2f427304

--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-C05UD330.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
+    <script type="module" crossorigin src="./assets/gemini-DUlK0yY5.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
   </head>
   <body>
     <div id="app">
