--- a/hifumi.html
+++ b/hifumi.html
@@ -14,14 +14,20 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-CECme7iV.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
+    <script type="module" crossorigin src="./assets/hifumi-CCcythwR.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
   </head>
   <body>
     <div id="app">
       <h1>Hifumi Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
+      <p>
+        作りながら学べる自作キーボードの入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」のセット教材として設計したマクロパッドです。
+      </p>
+      <p>
+        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
+      </p>
       <p>
         Influenced by: Meishi
       </p>
