--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-DxDkubnz.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
+    <script type="module" crossorigin src="./assets/morpho-F4x-bYYT.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
   </head>
   <body>
     <div id="app">
