--- a/wym16.html
+++ b/wym16.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-Bf-sDfrI.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
+    <script type="module" crossorigin src="./assets/wym16-BkXlKvu8.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
   </head>
   <body>
     <div id="app">
