--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-BLzXbU-V.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEwBN5Zb.js">
+    <script type="module" crossorigin src="./assets/kastor-BU6ySDQX.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
   </head>
   <body>
     <div id="app">
