Add affinity, disco9, kp-19

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@ canvas {
       <h2>マクロパッド・テンキー</h2>
       <ul>
         <li><a href="./hifumi.html">Hifumi Keyboard</a></li>
+        <li><a href="./affinity.html">Affinity Keyboard</a></li>
       </ul>
       <h2>研究用・その他</h2>
       <ul>
         <li><a href="./wym16.html">Wym16 Keyboard</a></li>
         <li><a href="./morpho.html">Morpho Keyboard</a></li>
+        <li><a href="./disco9.html">disco9 Keyboard</a></li>
+        <li><a href="./kp-19.html">KP-19</a></li>
       </ul>
       <p>
         全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいなと思っています。
