--- a/kp-19.html
+++ b/kp-19.html
@@ -24,7 +24,7 @@
         第一回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
-        ファームウェアに簡易的な FFT を内蔵しており、音楽プレーヤーの音声出力を接続すると、音楽に合わせて LED を制御することができます。このアイデアはのちの Affinity に引き継がれました。
+        ファームウェアに簡易的な FFT を内蔵しており、音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しむことができます。このアイデアはのちの Affinity に引き継がれました。
       </p>
       <p>
         触覚フィードバック検討のためのモーター出力端子、 SK6812Side LED の採用など、他にも実験的な要素を多く含んでいます。
