--- a/affinity.html
+++ b/affinity.html
@@ -21,7 +21,7 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        音楽プレーヤーの音声出力を接続することで、音楽に合わせた LED イルミネーションを楽しめるテンキーです。
+        音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しめるテンキーです。
       </p>
       <p>
         ファームウェア内で FFT していた KP-19 に対して、こちらは専用の IC を別途搭載して品質を向上しています。ノイズ対策が課題として残りました。
